--- a/.gitignore
+++ b/.gitignore
@@ -206,3 +206,4 @@ $RECYCLE.BIN/
 # End of https://www.gitignore.io/api/linux,macos,python,windows,visualstudiocode 
 crashlytics-build.properties
 
+McKay_RollABall/Temp/UnityLockfile
