--- a/McKay_RollABall/Assembly-CSharp.csproj
+++ b/McKay_RollABall/Assembly-CSharp.csproj
@@ -2,8 +2,6 @@
 <Project ToolsVersion="4.0" DefaultTargets="Build" xmlns="http://schemas.microsoft.com/developer/msbuild/2003">
   <PropertyGroup>
     <LangVersion>latest</LangVersion>
-    <CscToolPath>C:\Program Files\Unity\Hub\Editor\2019.2.0f1\Editor\Data\Tools\RoslynScripts</CscToolPath>
-    <CscToolExe>unity_csc.bat</CscToolExe>
   </PropertyGroup>
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
@@ -57,6 +55,7 @@
   <ItemGroup>
      <Compile Include="Assets\Scripts\BallController.cs" />
      <Compile Include="Assets\Scripts\CameraView.cs" />
+     <Compile Include="Assets\Scripts\Rotator.cs" />
  <Reference Include="Unity.Timeline.Editor">
  <HintPath>C:/Users/Mac McKay/Documents/G310-GameProduction/McKay_RollABall/McKay_RollABall/Library/ScriptAssemblies/Unity.Timeline.Editor.dll</HintPath>
  </Reference>
